fixed small alignment issues with about section

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -172,6 +172,8 @@ $hero-color: #138ee0;
     background-color: transparent;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    // width: 100%;
     min-height: 100vh;
     margin-bottom: 4em;
 }
@@ -197,7 +199,8 @@ $hero-color: #138ee0;
     gap: 2em;
     text-align: center;
     flex-wrap: wrap;
-    margin: auto;
+    width: 100%;
+    max-width: 1800px;
 }
 
 .about-info {
@@ -363,13 +366,13 @@ $hero-color: #138ee0;
 
 @media screen and (min-width: 1500px) {
     .about-content {
-        gap: 12em;
+        // gap: 12em;
     }
     .skill-item {
         height: 175px;
         width: 200px;
         &::before {
-            border: 10px solid transparent;
+            border: 8px solid transparent;
         }
     }
 
@@ -379,7 +382,7 @@ $hero-color: #138ee0;
 }
 
 @media screen and (min-width: 1800px) {
-    .skill-item {
-        width: 250px;
-    }
+    // .skill-item {
+    //     width: 250px;
+    // }
 }
